--- a/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
+++ b/wp-content/themes/fipradotcom/sass/navigation/_menus.scss
@@ -66,7 +66,7 @@
         &.current_page_ancestor > a,
         &.current_menu_ancestor > a {
           font-weight: $font__bold;
-          color: $color__fipra-blue-gray;
+          color: $color__fipra-blue;
           border-bottom: 0;
           padding: $v-rhythm / 2 em(24px);
         }
