--- a/wp-content/themes/fipradotcom/sass/typography/_copy.scss
+++ b/wp-content/themes/fipradotcom/sass/typography/_copy.scss
@@ -73,8 +73,7 @@ dt {
 p {
   &.lead {
     font-family: $font__sans;
-    @include media($media__medium) { @include font-size(18); }
-    line-height: $v-rhythm * 2;
+    @include media($media__medium) { @include font-size(18); line-height: $v-rhythm * 2.5; }
   }
   &.center {
     text-align: center;
