--- a/wp-content/themes/fipradotcom/sass/elements/_testimonials.scss
+++ b/wp-content/themes/fipradotcom/sass/elements/_testimonials.scss
@@ -66,6 +66,7 @@
 
   .button {
     cursor: pointer;
+    border-radius: 0;
     background-color: transparent;
     box-shadow: none;
     border: 0;
@@ -79,14 +80,11 @@
     line-height: 2;
     color: $color__fipra-blue;
 
-    &:first-child {
-      text-align: left;
-    }
-    &:last-child {
-      text-align: right;
-    }
+    &:first-child { text-align: left; }
+    &:last-child { text-align: right; }
     &:hover {
-      background-color: white;
+      background-color: darken($color__fipra-light-gray, 5%);
+      color:white;
     }
   }
 
